fixed zoom in issue on smaller devices

--- a/client/src/scss/about.scss
+++ b/client/src/scss/about.scss
@@ -64,9 +64,16 @@
     .right-section {
         flex: 2;
         font-size: clamp(1.075rem, 2vw, 1.3rem);
+        h2{
+            font-size: 1.7rem;
+            color: rgb(87, 87, 87);
+        }
         @media (max-width: 40rem){
             padding: 0;
             margin-block-end: 2rem;
+            h2{
+                font-size: 1.4rem;
+            }
         }
         //  @media (min-width: 40rem) and (max-width: 55rem) {
         //     font-size: 1.125rem;
