--- a/client/src/scss/photos.scss
+++ b/client/src/scss/photos.scss
@@ -103,5 +103,8 @@
             gap: 1rem;
             padding-inline: 0;
         }
+        .link{
+            font-size: 0.95rem;
+        }
     }
 }
